--- a/README.cd
+++ b/README.cd
@@ -1,1 +1,14 @@
-"#KarigarKiDuniya" 
+"#KarigarKiDuniya"
+
+Designed an e-commerce portal to bridge the gap between customers and vendors to increase means of revenue for the local and economically backward retail manufacturers.
+Implemented several features such as:
+Price Prediction,
+Market Basket Analysis,
+Image Search Engine,
+Voice Search Engine,
+Maps feature using HERE Geocoding and Search Api,
+OTP login using twilio REST Api,
+Google translate feature.
+
+To see implementation screenshots[Click here!](Implementation Screenshots)
+
