--- a/README.cd
+++ b/README.cd
@@ -10,5 +10,5 @@ Maps feature using HERE Geocoding and Search Api,
 OTP login using twilio REST Api,
 Google translate feature.
 
-To see implementation screenshots[Click here!](Implementation Screenshots)
+To see implementation screenshots go to Implementation Screenshots folder.
 
